# MTF

./: .cproject  .gitignore  .project  CMakeCache.txt  Makefile  cmake_install.cmake
gmock/: Makefile  (+1 more)
src/: CMakeCache.txt  CMakeLists.txt  MTF  Makefile  cmake_install.cmake
src/algorithms/: CMakeLists.txt  Makefile  Makefile.in  ialgorithm.h
src/algorithms/.deps/: algorithm_container.Po
src/algorithms/matrix/: Makefile  Makefile.in
src/algorithms/move_to_front/: Makefile  Makefile.in
src/algorithms/new_algorithms/: matrix.cpp  matrix.h  mtfalgorithm.cpp  mtfalgorithm.h
src/algorithms/tree/: Makefile  Makefile.in
src/controller/: CMakeLists.txt  Makefile  Makefile.in  analysis_runner.h  cmake_install.cmake
src/controller/.deps/: analysis_runner.Po
src/data_managment/: CMakeLists.txt  Makefile  Makefile.in
src/data_managment/.deps/: database.Po
src/data_managment/data_output/: Makefile  Makefile.in
src/data_managment/data_provider/: Makefile  Makefile.in
src/data_managment/results_collectors/: data_collector.cpp  data_collector.h
src/elements/: CMakeLists.txt  Makefile  Makefile.in  complex_difference_element.cpp  complex_difference_element.h  element.cpp  simple_element.cpp  simple_element.h
src/elements/.deps/: complex_difference_element.Po  element.Po  simple_element.Po
src/events/: CMakeLists.txt  Makefile  Makefile.in  cmake_install.cmake
src/events/.deps/: event_notifier.Po
src/exceptions/: CMakeLists.txt  Makefile  Makefile.in
src/exceptions/.deps/: data_provider_exception.Po  database_exception.Po  element_already_exists.Po  end_of_file_exception.Po  file_path_exception.Po  invalid_index_exception.Po  invalid_name_exception.Po  non_existing_element.Po
src/gmock/: config.status
src/gtest/: .makefile.am.swp  MTFAlgorithm_test.cpp  Makefile  analysis_runner_test.cpp  gtest_main.cpp  makefile.am  matrix_test.cpp
src/gtest/.deps/: mtfmaggtest-gtest_main.Po
src/headers/: Makefile  Makefile.in  algorithms.h
src/results/: CMakeLists.txt  Makefile  Makefile.in
src/results/.deps/: overall_result.Po  result.Po
src/test/: Makefile  Makefile.in  cmake_install.cmake
src/test/.deps/: mtfmagtest-data_collector_test.Po  mtfmagtest-database_test.Po  mtfmagtest-element_test.Po  mtfmagtest-event_notifier_test.Po  mtfmagtest-file_data_provider_test.Po  mtfmagtest-judge_collector_test.Po  mtfmagtest-move_to_front_test.Po  mtfmagtest-mtf_matrix_test.Po  mtfmagtest-proccessor_test.Po  mtfmagtest-tester_test.Po  mtfmagtest-tree_root_test.Po  mtfmagtest-utils_test.Po
src/tools/: CMakeLists.txt  Makefile  Makefile.in
src/utils/: CMakeLists.txt  Makefile  Makefile.in  cmake_install.cmake
(+42 files in other folders)
